Fix Layout on Mobile

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1205,6 +1205,10 @@ input:-webkit-autofill,
   justify-self: end;
 }
 
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
 .overflow-y-scroll {
   overflow-y: scroll;
 }
@@ -1299,6 +1303,11 @@ input:-webkit-autofill,
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+}
+
+.border-red-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(248 113 113 / var(--tw-border-opacity, 1));
 }
 
 .bg-black {
